# Selentra_CRM_Base_Template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/activities/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/api/: apps.py  serializers.py  urls.py  views.py
apps/contacts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  mixins.py  models.py  tests.py
apps/dashboard/: urls.py  views.py
apps/deals/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
crm_project/: .gitignore
crm_project/config/: settings.py  urls.py
django-crm-core/: README.md  conftest.py  pyproject.toml  pytest.ini
django-crm-core/crm_core/: admin.py  apps.py  filters.py  forms.py  models.py  test_urls.py  urls.py  views.py
django-crm-core/crm_core/api/: routers.py  schemas.py
django-crm-core/crm_core/management/commands/: seed_crm.py
django-crm-core/crm_core/selectors/: opportunity_selectors.py  reports_selectors.py
django-crm-core/crm_core/services/: opportunity_service.py  reports_service.py
django-crm-core/crm_core/tests/: test_views.py
nginx/: nginx.conf
requirements/: base.txt  production.txt
static/css/: crm.css
static/js/: crm.js
templates/: base.html
templates/accounts/: login.html  profile.html
templates/activities/: activity_detail.html  (+2 more)
(+51 files in other folders)
